--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-Flask
-librosa
-numpy
-scikit-learn
-soundfile
+Flask==2.3.3
 Flask-Cors==4.0.0
+gunicorn==21.2.0
+librosa==0.10.1
+numpy==1.24.3
+scikit-learn==1.3.0
+joblib==1.3.2
+werkzeug==2.3.7
